# yasniy

./: .gitignore  AGENTS.md  README.md  pyproject.toml  task.md  yasn.toml  yasny.toml
.github/workflows/: build-installer.yml  deploy-docs.yml  release.yml  sync-wiki.yml
backend/: main.яс
docs/: _config.yml  architecture.md  cli-reference.md  github-pages.md  index.md  installation.md  language-reference.md  language-tutorial.md  native-toolchain.md  packaging-and-run.md  quickstart.md  top3-gap-analysis.md  troubleshooting.md  ui-contract.md
examples/: README.md  yasn.toml  алиасы_и_namespace.yapp  алиасы_и_namespace.ybc  алиасы_и_namespace.яс  асинхронность.яс  витрина.яс  выборочный_импорт.яс  модули.yapp  модули.ybc  модули.яс  ошибка_экспорта.яс  тень_импорта.яс  тест.yapp  тест.ybc  тест.яс  типы_и_циклы.яс  функции.яс
examples/backend/: main.яс
examples/frontend/: index.html
examples/full-stack/: yasn.toml
examples/lib/: мат_экспорт.яс  ошибки.яс  (+2 more)
installer/: build-installer.ps1  yasn.iss
scripts/: install-global.ps1  install-global.sh  publish-native.ps1  release-push.ps1
tests/: async_test.яс  math_test.яс  stdlib_test.яс
yasn/: backend_core.py  bc.py  checker.py  cli.py  compiler.py  deps.py  module_loader.py  server.py  vm.py
yasn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
yasny/: ast.py  checker.py  cli.py  compiler.py  deps.py  lexer.py  module_loader.py  optimizer.py  parser.py  pipeline.py  project_runner.py  server.py  types.py  vm.py
yasny.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+39 files in other folders)
