[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yasn"
version = "0.1.0"
description = "Compiler and VM for YASN language"
requires-python = ">=3.11"

[project.scripts]
yasn = "yasn.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["yasn", "yasn.*"]
exclude = ["examples", "examples.*", "docs", "docs.*", "build", "build.*"]
